[gd_scene load_steps=19 format=2]

[ext_resource path="res://slot_building.gd" type="Script" id=1]
[ext_resource path="res://slot_nature.gd" type="Script" id=2]
[ext_resource path="res://slot_shape.gd" type="Script" id=3]
[ext_resource path="res://sum_label.gd" type="Script" id=4]
[ext_resource path="res://label_nature.gd" type="Script" id=5]
[ext_resource path="res://label_shape.gd" type="Script" id=6]
[ext_resource path="res://go_to_score_button.gd" type="Script" id=7]
[ext_resource path="res://label_building.gd" type="Script" id=8]
[ext_resource path="res://Scenes/dice.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/board.tscn" type="PackedScene" id=10]
[ext_resource path="res://Images/d6_outline.png" type="Texture" id=11]
[ext_resource path="res://Sound/BGM-Test.mp3" type="AudioStream" id=12]
[ext_resource path="res://Sound/Effect-RollingTest.mp3" type="AudioStream" id=13]
[ext_resource path="res://roll_button.gd" type="Script" id=14]
[ext_resource path="res://Src/state_machine.gd" type="Script" id=15]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 35, 35 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 35, 35 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 35, 35 )

[node name="game" type="Node2D"]

[node name="Background" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="Background"]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.195313, 0.195313, 0.195313, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="State_Machine" type="Node" parent="."]
script = ExtResource( 15 )

[node name="READY" type="Node" parent="State_Machine"]

[node name="DICE_OFF" type="Node" parent="State_Machine"]

[node name="DICE_ON" type="Node" parent="State_Machine"]

[node name="TURN_END" type="Node" parent="State_Machine"]

[node name="Dice" type="Node" parent="."]

[node name="Dice_0" parent="Dice" instance=ExtResource( 9 )]
position = Vector2( 376, 64 )

[node name="Dice_1" parent="Dice" instance=ExtResource( 9 )]
position = Vector2( 464, 64 )

[node name="Dice_2" parent="Dice" instance=ExtResource( 9 )]
position = Vector2( 552, 64 )

[node name="Slot" type="Node" parent="."]

[node name="Slot_Shape" type="Area2D" parent="Slot"]
position = Vector2( 814, 214 )
scale = Vector2( 0.6, 0.6 )
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Slot/Slot_Shape"]
texture = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slot/Slot_Shape"]
shape = SubResource( 4 )

[node name="Slot_Building" type="Area2D" parent="Slot"]
position = Vector2( 811, 390 )
scale = Vector2( 0.6, 0.6 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="Slot/Slot_Building"]
texture = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slot/Slot_Building"]
shape = SubResource( 5 )

[node name="Slot_Nature" type="Area2D" parent="Slot"]
position = Vector2( 808, 566 )
scale = Vector2( 0.6, 0.6 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Slot/Slot_Nature"]
texture = ExtResource( 11 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Slot/Slot_Nature"]
shape = SubResource( 6 )

[node name="Label_Shape" type="Label" parent="Slot"]
margin_left = 891.0
margin_top = 176.0
margin_right = 901.0
margin_bottom = 190.0
rect_scale = Vector2( 5, 5 )
text = "0"
script = ExtResource( 6 )

[node name="Label_Building" type="Label" parent="Slot"]
margin_left = 891.0
margin_top = 350.0
margin_right = 901.0
margin_bottom = 364.0
rect_scale = Vector2( 5, 5 )
text = "1"
script = ExtResource( 8 )

[node name="Label_Nature" type="Label" parent="Slot"]
margin_left = 891.0
margin_top = 534.0
margin_right = 901.0
margin_bottom = 548.0
rect_scale = Vector2( 5, 5 )
text = "2"
script = ExtResource( 5 )

[node name="Board" parent="." instance=ExtResource( 10 )]
visible = false
position = Vector2( 51, 41 )

[node name="SumLabel" type="Label" parent="."]
margin_left = 128.0
margin_top = 136.0
margin_right = 175.0
margin_bottom = 150.0
rect_scale = Vector2( 2, 2 )
text = "Total: 0"
script = ExtResource( 4 )

[node name="RollButton" type="Button" parent="."]
margin_left = 48.0
margin_top = 41.0
margin_right = 129.0
margin_bottom = 61.0
rect_scale = Vector2( 3, 3 )
text = "Roll 3 Dice"
script = ExtResource( 14 )

[node name="EffectRolling" type="AudioStreamPlayer" parent="RollButton"]
stream = ExtResource( 13 )

[node name="ScoreButton" type="Button" parent="."]
visible = false
margin_left = 395.0
margin_top = 501.0
margin_right = 476.0
margin_bottom = 521.0
rect_scale = Vector2( 3, 3 )
text = "Go to Score"
script = ExtResource( 7 )

[node name="BGM" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )
volume_db = -8.0
autoplay = true
